--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Jed's Portfolio</title>
-    <link rel="stylesheet" href="gh-pages\styles\style.css">
-    <link rel="stylesheet" href="gh-pages\styles\githubrepos.css">
+    <link rel="stylesheet" href="gh-pages/styles/style.css">
+    <link rel="stylesheet" href="gh-pages/styles/githubrepos.css">
 </head>
 
 <body>
