--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
         <ul id="repo-list"></ul>
     </main>
     <footer>
-        <div class="content">
-            <p class="text">&copy; 2023 Jerrald Guiriba</p>
-            <span class="socials">
-                <a href="https://discordapp.com/users/839430747088617472" target="_blank"><img src="svg/socials/Discord-W.svg" alt="Discord" width="25"></a>
-                <a href="mailto:jguiriba11@gmail.com" target="_blank"><img src="svg/socials/Gmail-W.svg" alt="Gmail" width="25"></a>
-                <a href="https://t.me/JG556" target="_blank"><img src="svg/socials/Telegram-W.svg" alt="Telegram" width="25"></a>
-                <a href="https://twitter.com/556JED" target="_blank"><img src="svg/socials/Twitter-W.svg" alt="Twitter" width="25"></a>
-                <a href="https://wakatime.com/@a95a8ae5-2b84-47ae-b0e1-703225ad845f" target="_blank"><img src="svg/socials/WakaTime-W.svg" alt="WakaTime" width="25"></a>
-            </span>
+        <p class="text">&copy; 2023 Jerrald Guiriba</p>
+        <div class="socials">
+            <a href="https://discordapp.com/users/839430747088617472" target="_blank"><img src="svg/socials/Discord-W.svg" alt="Discord" width="25"></a>
+            <a href="mailto:jguiriba11@gmail.com" target="_blank"><img src="svg/socials/Gmail-W.svg" alt="Gmail" width="25"></a>
+            <a href="https://t.me/JG556" target="_blank"><img src="svg/socials/Telegram-W.svg" alt="Telegram" width="25"></a>
+            <a href="https://twitter.com/556JED" target="_blank"><img src="svg/socials/Twitter-W.svg" alt="Twitter" width="25"></a>
+            <a href="https://wakatime.com/@a95a8ae5-2b84-47ae-b0e1-703225ad845f" target="_blank"><img src="svg/socials/WakaTime-W.svg" alt="WakaTime" width="25"></a>
         </div>
     </footer>
     <script src="gh-pages\scripts\githubrepos.js"></script>
